// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider in default/primary state matches snapshot 1`] = `
.c2 {
  font-family: "adelle-sans",sans-serif;
  font-size: 0.875rem;
  line-height: 1.5em;
  margin-left: 8px;
  margin-right: 8px;
  margin-top: 0;
  margin-bottom: 0;
}

.c0 {
  margin-top: 16px;
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2a2a2a;
}

.c1 {
  height: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  opacity: 0.6;
  background-color: #2a2a2a;
}

<div>
  <div
    class="c0"
    display="flex"
    width="1"
  >
    <span
      class="c1"
    />
  </div>
  <div
    class="c0"
    display="flex"
    width="1"
  >
    <span
      class="c1"
    />
    <p
      class="c2"
    >
      test
    </p>
    <span
      class="c1"
    />
  </div>
</div>
`;

exports[`Divider inverse state matches snapshot 1`] = `
.c2 {
  font-family: "adelle-sans",sans-serif;
  font-size: 0.875rem;
  line-height: 1.5em;
  margin-left: 8px;
  margin-right: 8px;
  margin-top: 0;
  margin-bottom: 0;
}

.c0 {
  margin-top: 16px;
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #fff;
}

.c1 {
  height: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  opacity: 0.6;
  background-color: #fff;
}

<div>
  <div
    class="c0"
    display="flex"
    width="1"
  >
    <span
      class="c1"
    />
  </div>
  <div
    class="c0"
    display="flex"
    width="1"
  >
    <span
      class="c1"
    />
    <p
      class="c2"
    >
      test
    </p>
    <span
      class="c1"
    />
  </div>
</div>
`;

exports[`Divider with "width"-attribute matches snapshot 1`] = `
.c0 {
  margin-top: 16px;
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2a2a2a;
}

.c2 {
  margin-top: 16px;
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 0.5;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2a2a2a;
}

.c3 {
  margin-top: 16px;
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 200px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2a2a2a;
}

.c4 {
  margin-top: 16px;
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2a2a2a;
}

.c1 {
  height: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  opacity: 0.6;
  background-color: #2a2a2a;
}

<div>
  <div
    class="c0"
    display="flex"
    width="1"
  >
    <span
      class="c1"
    />
  </div>
  <div
    class="c2"
    display="flex"
    width="0.5"
  >
    <span
      class="c1"
    />
  </div>
  <div
    class="c3"
    display="flex"
    width="200px"
  >
    <span
      class="c1"
    />
  </div>
  <div
    class="c4"
    display="flex"
    width="2rem"
  >
    <span
      class="c1"
    />
  </div>
</div>
`;

exports[`Divider with custom margin matches snapshot 1`] = `
.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2a2a2a;
}

.c2 {
  margin-left: 40px;
  margin-right: 40px;
  margin-top: 16px;
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2a2a2a;
}

.c3 {
  margin-bottom: 16px;
  margin-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2a2a2a;
}

.c4 {
  margin-left: 3rem;
  margin-top: 16px;
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2a2a2a;
}

.c1 {
  height: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  opacity: 0.6;
  background-color: #2a2a2a;
}

<div>
  <div
    class="c0"
    display="flex"
    width="1"
  >
    <span
      class="c1"
    />
  </div>
  <div
    class="c2"
    display="flex"
    width="1"
  >
    <span
      class="c1"
    />
  </div>
  <div
    class="c3"
    display="flex"
    width="1"
  >
    <span
      class="c1"
    />
  </div>
  <div
    class="c4"
    display="flex"
    width="1"
  >
    <span
      class="c1"
    />
  </div>
</div>
`;
